# explore_bayesian_stats

./: README.md  Taskfile.yml  envrc.sample  first.py  pyproject.toml  utils.py
.github/workflows/: ci.yml
marimo/: explore_grid_approximation.py
tests/: first_test.py
